--- a/index.html
+++ b/index.html
@@ -3,9 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donate Bangladesh</title>
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+    <!-- css file link (style.css) -->
+    <link rel="stylesheet" href="CSS/style.css">
+
 </head>
 <body>
+
+    <!-- header -->
+    <header class="">
+
+        <!-- nav section -->
+        <nav class="">
+            <div class="width flex nav padding">
+                <button class="green-btn">Blog</button>
+                <div class="flex nav-logo">
+                    <img src="assets/logo.png" alt="">
+                    <h3 class="nav-title">Donate Bangladesh</h3>
+                </div>
+                <div class="flex nav-currency">
+                    <img width="32" height="32" src="https://img.icons8.com/retro/32/cheap-2.png" alt="cheap-2"/>
+                    <h5 class="nav-amount"><span>5500</span> BDT</h5>
+                </div>
+            </div>
+        </nav>
+
+        <!-- button section -->
+        <section class="button-section width flex">
+            <button class="green-btn">Donation</button>
+            <button class="green-btn history">History</button>
+        </section>
+
+    </header>
+
+    <!-- main -->
+    <main>
+
+        <section class="donate width padding flex">
+
+            <!-- donate card 1 -->
+            <div class="donate-card flex">
+                <img src="assets/noakhali.png" alt="">
+                <div class="flex donate-card-writing">
+                    <div class="flex">
+                        <img width="25" height="25" src="https://img.icons8.com/retro/25/cheap-2.png" alt="cheap-2"/>
+                        <h5><span>5500</span> BDT</h5>
+                    </div>
+                    <h2>Donate for Flood at Noakhali, Bangladesh</h2>
+                    <p>
+                        The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
+                    </p>
+                    <input placeholder="Write Donation Amount" type="text">
+                    <button class="green-btn">Donate Now</button>
+                </div>
+            </div>
+
+            <!-- donate card 2 -->
+            <div class="donate-card flex">
+                <img src="assets/feni.png" alt="">
+                <div class="flex donate-card-writing">
+                    <div class="flex">
+                        <img width="25" height="25" src="https://img.icons8.com/retro/25/cheap-2.png" alt="cheap-2"/>
+                        <h5><span>5500</span> BDT</h5>
+                    </div>
+                    <h2>Donate for Flood Relief in Feni,Bangladesh</h2>
+                    <p>
+                        The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.
+                    </p>
+                    <input placeholder="Write Donation Amount" type="text">
+                    <button class="green-btn">Donate Now</button>
+                </div>
+            </div>
+
+            <!-- donate card 3 -->
+            <div class="donate-card flex">
+                <img src="assets/feni.png" alt="">
+                <div class="flex donate-card-writing">
+                    <div class="flex">
+                        <img width="25" height="25" src="https://img.icons8.com/retro/25/cheap-2.png" alt="cheap-2"/>
+                        <h5><span>5500</span> BDT</h5>
+                    </div>
+                    <h2>Aid for Injured in the Quota Movement</h2>
+                    <p>
+                        The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.
+                    </p>
+                    <input placeholder="Write Donation Amount" type="text">
+                    <button class="green-btn">Donate Now</button>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
     
 </body>
 </html>
