complete main part

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- main -->
     <main>
 
-        <section id="Donation" class="donate width padding flex btn-section">
+        <section id="Donation" class=" donate width padding flex btn-section">
 
             <!-- donate card 1 -->
             <div class="donate-card flex">
@@ -87,7 +87,7 @@
 
             <!-- donate card 3 -->
             <div class="donate-card flex">
-                <img src="assets/feni.png" alt="">
+                <img src="assets/quota-protest.png" alt="">
                 <div class="flex donate-card-writing">
                     <div class="flex">
                         <img width="25" height="25" src="https://img.icons8.com/retro/25/cheap-2.png" alt="cheap-2"/>
@@ -104,9 +104,7 @@
 
         </section>
 
-        <section id="History" class="hidden btn-section width padding ">
-            <h1>Hello World</h1>
-        </section>
+        <section id="History" class="hidden btn-section width padding history-section"></section>
 
         <section id="modal-popup" class="modal-popup">
             <div class="modal">
