--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- css file link (model.css) -->
     <link rel="stylesheet" href="CSS/modal.css">
 
+    <!-- css file link (responsive.css) -->
+    <link rel="stylesheet" href="CSS/responsive.css">
+
 </head>
 <body>
 
@@ -26,14 +29,14 @@
         <!-- nav section -->
         <nav class="">
             <div class="width flex nav padding">
-                <button class="green-btn">Blog</button>
+                <button id="blog" class="green-btn">Blog</button>
                 <div class="flex nav-logo">
                     <img src="assets/logo.png" alt="">
                     <h3 class="nav-title">Donate Bangladesh</h3>
                 </div>
                 <div class="flex nav-currency">
                     <img width="32" height="32" src="https://img.icons8.com/retro/32/cheap-2.png" alt="cheap-2"/>
-                    <h5 class="nav-amount"><span id="nav-amount">5500</span> BDT</h5>
+                    <h5 class="nav-amount"><span id="nav-amount">13000</span> BDT</h5>
                 </div>
             </div>
         </nav>
